# yadro-impulse-models

./: .gitignore  README.md  run.sh
cpp/: CMakeLists.txt  main.cpp
cpp/include/: models.hpp
cpp/src/: models.cpp
files/: config.txt
python/: process.py
